# hexlet-code

./: .gitignore  db.sqlite3  pyproject.toml
task_manager/: settings.py  urls.py  views.py
templates/: index.html
