[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["evgeny <zhek12322@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.4"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
